# optivibe

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: constants.yaml
configs/presets/cantilever/: silica.yaml
configs/presets/detector/: balanced_24bit.yaml
configs/presets/fiber/: smf28.yaml
configs/presets/reflector/: cyl_rc31.yaml  cyl_rc62.yaml  plane_flat.yaml  sphere_rc62.yaml  wedge_20mrad.yaml
configs/presets/source/: dfb.yaml  sld.yaml
configs/scenarios/: hello.yaml
configs/variants/: A.yaml  B.yaml  C.yaml  D.yaml  plane_demo.yaml  sphere_demo.yaml  wedge_demo.yaml
docs/: architecture.md  data-import.md  index.md  packaging.md  physics-map.md  reference.md  user-guide.md
docs/manual/: build.mjs  manifest.mjs  package-lock.json  package.json  shared.mjs  validate.py
docs/manual/figures/: build_figures.py
docs/manual/sections/: 00_intro.mjs  01_quickstart.mjs  algorithms.mjs  architecture.mjs  backlog.mjs  config_subsystems.mjs  delivery.mjs  glossary.mjs  implementation.mjs  map.mjs  physmodel.mjs  reflectors.mjs  testing.mjs  ui_cli.mjs  ui_data.mjs  ui_gui.mjs
examples/: cross_axis.yaml  hello.yaml  linearity_ramp.yaml  montecarlo_tolerances.yaml  multitone.yaml  nea_vs_L.yaml  noise_floor.yaml  random.yaml  recover_sine.yaml  reflector_plane.yaml  reflector_sphere.yaml  reflector_wedge.yaml  replay_csv.yaml  replay_tdms.yaml  replay_wav.yaml  resonance_sweep.yaml  shock.yaml  sine_with_noise.yaml  sweep.yaml  sweep_amplitude.yaml  vibration_severity.yaml
examples/data/: example_accel.csv  example_accel.tdms
packaging/: optivibe-gui.spec  optivibe_gui_launch.py
src/optivibe/: __init__.py
src/optivibe/analysis/: __init__.py  io.py  monte_carlo.py  nea_budget.py  spec.py  sweep.py  truth_vs_recovery.py  variant_tools.py
src/optivibe/cli/: __init__.py  main.py
src/optivibe/core/: __init__.py  logging.py  registry.py  stages.py  types.py  units.py
src/optivibe/core/config/: __init__.py  loader.py  models.py  presets.py  subsystems.py
src/optivibe/detector/: __init__.py  photodiode.py
src/optivibe/dsp/: __init__.py  calibration.py  iso.py  kinematics.py  metrics.py  nea.py  sensitivity.py  spectra.py  standard.py  stub.py
src/optivibe/excitation/: __init__.py  _common.py  from_file.py  random_noise.py  shock.py  sweep.py  tonal.py
src/optivibe/gui/: __init__.py  app.py  main_window.py
src/optivibe/gui/controllers/: __init__.py  job_controller.py  run_controller.py  scenario_builder.py  system_builder.py
src/optivibe/gui/widgets/: __init__.py  analysis_tabs.py  cantilever_view.py  control_panel.py  excitation_builder.py  live_plot.py  live_view.py  mpl_canvas.py  physics_tab.py  subsystem_forms.py
src/optivibe/gui/workers/: __init__.py  job_worker.py  jobs.py  pipeline_worker.py
src/optivibe/io/: __init__.py  loaders.py
src/optivibe/mechanics/: __init__.py  cantilever.py  modal.py  stub.py
src/optivibe/optics/: __init__.py  cylinder.py  gaussian.py  plane.py  reflector.py  sphere.py  stub.py  wedge.py
src/optivibe/pipeline/: __init__.py  orchestrator.py
src/optivibe/viz/: __init__.py  analysis.py  detector.py  dsp.py  excitation.py  optics.py  physics.py
tests/: conftest.py  test_analysis.py  test_config_subsystems.py  test_config_variants.py  test_constants_golden.py  test_detector_photodiode.py  test_dsp.py  test_excitation_generators.py  test_excitation_scenarios.py  test_gui_s7.py  test_gui_scenario_builder.py  test_gui_smoke.py  test_gui_system_builder.py  test_io_instrument_loaders.py  test_io_loaders.py  test_mechanics_modal.py  test_optics_cylinder.py  test_optics_reflector_family.py  test_pipeline_hello.py  test_registry.py  test_sensitivity.py  test_smoke_imports.py  test_types_contracts.py  test_viz_physics.py
tests/data/: resolved_variants_golden.json
