# PEP 621 metadata; build backend hatchling; env manager uv (SW-01, SW-07; doc 09 §2).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optivibe"
version = "0.0.0"
description = "Digital twin of a fiber-optic vibration sensor (forward + inverse + analytics)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "OptiVibe Team" }]
keywords = ["vibration", "fiber-optic", "sensor", "digital-twin", "dsp"]

# Core runtime dependencies (doc 09 §2; SW-01).
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[project.optional-dependencies]
# Desktop GUI shell (PySide6 + PyQtGraph). Kept optional so the physics core
# installs and runs head-less without Qt (doc 09 §3, §9; SW-06).
gui = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]
# Developer tooling: lint/format, types, tests, property tests, hooks (doc 10).
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
# Documentation site (doc 09 §2).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
# Instrument-capture loaders (seam SW-08): read measured records from common
# acquisition formats. Optional so the physics core installs without them; each
# loader imports its backend lazily and points here if it is missing.
io-formats = [
    "nptdms>=1.9",
    "pyuff>=2.4",
    "h5py>=3.10",
]
# Desktop-app packaging (task S8): bundle the GUI into a self-contained
# distributable. PyInstaller is the most battle-tested route for PySide6 apps.
packaging = [
    "pyinstaller>=6.6",
]

[project.scripts]
optivibe = "optivibe.cli.main:main"

[project.gui-scripts]
optivibe-gui = "optivibe.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/optivibe"]

# --------------------------------------------------------------------------- #
# Ruff: single linter + formatter (doc 10 §2). Rule sets E,F,W,I,UP,B,SIM,NPY,
# RUF + D (docstrings of public API). Line length 100.
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY", "RUF", "D"]
# D203/D213 conflict with the numpy convention; pydocstyle convention resolves it.
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Tests are not public API: docstring rules relaxed.
"tests/**" = ["D"]
"examples/**" = ["D"]

# Manual build tooling (S-DOC-2, doc 15 §6) is scripts, not library API:
# relax docstrings like tests/examples; the figure generator carries intentional
# Cyrillic UI/title strings, so allow the ambiguous-unicode lint there.
"docs/manual/**" = ["D"]
"docs/manual/figures/*" = ["D", "RUF001"]

# --------------------------------------------------------------------------- #
# mypy: strict typing for the library (doc 10 §3). Pydantic plugin enabled.
# Heavy optional deps without complete stubs are treated as Any on import.
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
files = ["src"]
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# Heavy optional deps without complete stubs are treated as Any on import.
# matplotlib >= 3.8 ships py.typed, so viz/ (S1) type-checks without an override;
# plotly is added here if/when viz starts importing it (S6).
module = [
    "scipy.*",
    "pyqtgraph.*",
    "PySide6.*",
    "nptdms.*",
    "pyuff.*",
    "h5py.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest + coverage (doc 10 §10). Core coverage target >= 85%.
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "gui: tests that require the PySide6/pyqtgraph optional extra",
    "golden: tests that check code against analytical references from the knowledge base",
]

[tool.coverage.run]
branch = true
source = ["optivibe"]
omit = ["src/optivibe/gui/*"]
